2009-10-15 Pratyusha Doddpaneni <pratyusha.d@in.ibm.com>
	* configure.ac
	[ 2871527 ] TestProviders not switchable

2009-10-14  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* 10_interop.mof
	[ 2875050 ] default MOFs should allow for multiple files

2009-10-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcbrepos.sh.in, man/sfcbrepos.1.pre.in:
	[ 2878175 ] sfcbrepos should pass all backend options to sfcbmof

2009-10-13 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, default.reg.in, profileProvider.c
	[ 2864660 ] IndicationProfile: CIM_RegisteredProfile

2009-10-13 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, interop.mof, 10_interop.mof: 
	[ 2875050 ] default MOFs should allow for multiple files

2009-10-11 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am, test/schema/Test_Query.*, test/TestProviders/cmpiTestExecQueryProvider.c, 				       test/TestProviders/tests/execQuery*.*
	[2859978] TestProviders for SFCB 

2009-10-10 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/TestProviders/cmpiTestInstanceProvider.c
	[2859978] TestProviders for SFCB ( Typo error in the sample instance provider )
	* test/TestProviders/tests/Test7ExecQuery*.*
	[2859978] TestProviders for SFCB (ExecQuery test cases for sample InstanceProvider )

2009-10-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* default.reg.in, interop.mof, interopServerProvider.c: 
	[ 2875822 ] IndicationProfile: CIM_HostedService

2009-10-05 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/schema/Test_Misc.reg, test/schema/Test_Misc.mof
	[ 2859978 ] TestProviders for SFCB ( Updating with schema files )

2009-10-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2864610 ] Subclasses not enum'd

2009-10-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/SAE*
	[ 2850167 ] IndicationProfile: CIM_ServiceAffectsElement creation 
	Added some testcases

2009-10-02  Chris Buccella  <buccella@linux.vnet.ibm.com>
